--- a/.gitattributes
+++ b/.gitattributes
@@ -24,3 +24,6 @@
 *.mlappinstall  binary
 *.mlpkginstall  binary
 *.mn            binary
+
+# Change Juptyer notebook format to Python
+*.ipynb linguist-language=Python
